fix(footer): Improve copyrights alignment.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,6 +7,7 @@
 
 .footer__container {
   display: flex;
+  align-items: center;
   max-width: $container-max-width;
   margin: 0 auto;
 }
